Add profile image and update about section layout
Added a new profile image (Me.jpg) and displayed it in the about section of index.html. Updated style.css to support circular images and adjusted grid item styling. Also added .gitignore and removed .vscode/extensions.json. Project and IDE configuration files were added for JetBrains IDE support.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             target="_blank"
           ></a>
         </div>
+        <div class="borderless-grid-item" style="background-color: rgba(0,0,0,0)">
+          <img src="assets/img/Me.jpg" height="512" width="512" class="circle-image"  alt="Photo of me"/>
+        </div>
       </div>
     </section>
     <section id="projects">
